--- a/src/main/resources/templates/thymeleaf/home/home.html
+++ b/src/main/resources/templates/thymeleaf/home/home.html
@@ -7,13 +7,12 @@
 	<div class="home_wrapper">
 		<!-- 토스트 -->
 		<div th:replace="~{alert/toast::div}"></div>
-		<div class="home_carousel container-fluid px-0">
+		<div class="home_carousel container-fluid px-0 mb-5">
 			<div class="home_carouselBox">
 				<div class="carousel_bg_whiteBox"></div>
 				<!-- 홈 페이지 메인 캐러샐 영역 -->
 				<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
 					<div class="carousel-inner">
-
 						<div class="carousel-item active">
 							<div class="container">
 								<!-- 캐러셀 화면 1 -->
@@ -289,7 +288,7 @@
 				</div>
 			</div> <!-- home_carouselBox -->
 		</div> <!-- home_carousel -->
-
+		<div class="w-100 py-5 my-5"></div><!-- 여백 박스 -->
 		<!-- home 여행 콕콕 section -->
 		<section id="home_data_lab">
 			<div class="home_data_labBox container px-0">
@@ -681,9 +680,9 @@
 
 			</div> <!-- home_dl_content -->
 
-	</div> <!-- home_data_labBox -->
-	</section> <!-- home_data_lab -->
-
+			</div> <!-- home_data_labBox -->
+		</section> <!-- home_data_lab -->
+		<div class="w-100 py-5 my-5"></div><!-- 여백 박스 -->
 	<section class="home_info_data container my-5">
 		<div class="row home_info_data_wrap text-center">
 			<div class="col-12 col-lg-6 home_info_data_img py-lg-5">
@@ -702,7 +701,7 @@
 			</div><!--home_info_data_text-->
 		</div><!--home_info_data_wrap-->
 	</section><!--home_info_data-->
-	
+	<div class="w-100 py-5 my-5"></div><!-- 여백 박스 -->
 	<!-- 검색 section -->	
 	<section class="home_search container-fluid p-0">
 	<div class="footer-radius"></div>
@@ -761,7 +760,7 @@
 		</div>
 	</div>
 	</section>
-
+	
 
 	</div> <!-- home_wrapper -->
 	<!--footer-->
