--- a/src/main/resources/templates/nav/nav.html
+++ b/src/main/resources/templates/nav/nav.html
@@ -42,6 +42,16 @@
           <li class="nav-item">
             <a class="nav-link mb-3 mb-md-0" href="map">지도</a>
           </li>
+          <th:block th:if="${session.Member_Id == null}">
+          <li class="nav-item d-md-none">
+            <a class="nav-link mb-3 mb-md-0" href="로그인">로그인</a>
+          </li>
+           </th:block>
+            <th:block th:unless="${session.Member_Id == null}">
+          <li class="nav-item d-md-none">
+            <a class="nav-link mb-3 mb-md-0" href="마이페이지">마이페이지</a>
+          </li>
+           </th:block>
         </ul>
       </div>
       <!-- nav 우측 -->
