--- a/src/main/resources/templates/thymeleaf/band/band.html
+++ b/src/main/resources/templates/thymeleaf/band/band.html
@@ -91,7 +91,7 @@
                 <div class="band_today_best_list container">
 
                     <!-- 오늘의 인기글 item-->
-                    <div class="col-lg-6 col-md-12 band_today_best_item">
+                    <div class="col-lg-6 col-md-12 band_today_best_item me-2">
                         <div class="best_item_title">
                             <strong>마운틴TV 공식밴드</strong>
                         </div>
@@ -110,7 +110,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-6 col-md-12 band_today_best_item">
+                    <div class="col-lg col-md-12 band_today_best_item ms-2">
                         <div class="best_item_title">
                             <strong>마운틴TV 공식밴드</strong>
                         </div>
@@ -129,7 +129,7 @@
                         </div>
                     </div>
 
-                    <div class=" col-lg-6 col-md-12 band_today_best_item">
+                    <div class=" col-lg-6 col-md-12 band_today_best_item me-2">
                         <div class="best_item_title">
                             <strong>마운틴TV 공식밴드</strong>
                         </div>
@@ -148,7 +148,7 @@
                         </div>
                     </div>
 
-                    <div class=" col-lg-6 col-md-12 band_today_best_item">
+                    <div class=" col-lg col-md-12 band_today_best_item ms-2">
                         <div class="best_item_title">
                             <strong>마운틴TV 공식밴드</strong>
                         </div>
@@ -174,9 +174,5 @@
     </div>  <!-- band_wrapper -->
     <div th:replace="~{footer/footer::footer}"></div>
 
-<script>
-
-
-</script>
 </body>
 </html>
