--- a/src/main/resources/templates/thymeleaf/band/myBand_member.html
+++ b/src/main/resources/templates/thymeleaf/band/myBand_member.html
@@ -54,7 +54,7 @@
 								<div class="myBand_write_btn">
 									<input name="bandCode" type="hidden" th:value="${myBandList.getBand_code()}" />
 									<input name="joinMemberId" type="hidden" th:value="${session.Member_Id}" />
-									<a href="javascript:addMember_band.submit();" >
+									<a href="javascript:addMember_band.submit();" class="">
 										<span>가입하기</span>
 									</a>								
 								</div>		
