--- a/src/main/resources/static/css/map.css
+++ b/src/main/resources/static/css/map.css
@@ -1,152 +1,188 @@
 /* 맵 컨텐츠 전체를 감싸는 영역 스타일 */
-div.map_all_contentBox{
-    width: 100%;
-    display: flex; 
-    flex-direction: row;
-
+div.map_all_contentBox {
+	width: 100%;
+	display: flex;
+	flex-direction: row;
 }
 /* map guide 영역 */
-div.map_guide{
-    width: 400px;
+div.map_guide {
+	width: 400px;
 }
-div.map_curr_locationBox{
-    width: 100%;
-    box-sizing: border-box;
-    margin-bottom: 20px;
+
+div.map_curr_locationBox {
+	width: 100%;
+	box-sizing: border-box;
+	margin-bottom: 20px;
 }
 
 /* map_guide_iconBox 스타일 */
-ul.map_guide_icon_list{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    box-sizing: border-box;
+ul.map_guide_icon_list {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	box-sizing: border-box;
 }
-li.map_guide_icon_item{
-    width: 19.5%;
-    box-sizing: border-box;
-    font-size: small;
-    text-align: center;
+
+li.map_guide_icon_item {
+	width: 19.5%;
+	box-sizing: border-box;
+	font-size: small;
+	text-align: center;
 }
-li.map_icon_electric_charg{
-    font-size: 12px;
+
+li.map_icon_electric_charg {
+	font-size: 12px;
 }
 /* map_icon 이미지 설정 */
-li.map_icon_near_trip::before{
-    content: '';
-    display: block;
-    width: 36px;
-    height: 36px;
-    margin: auto;
-    background: url('../img/map/icon_depth1_menu.png') no-repeat;
+li.map_icon_near_trip::before {
+	content: '';
+	display: block;
+	width: 36px;
+	height: 36px;
+	margin: auto;
+	background: url('../img/map/icon_depth1_menu.png') no-repeat;
 }
-li.map_icon_food::before{
-    content: '';
-    display: block;
-    width: 36px;
-    height: 36px;
-    margin: auto;
-    background: url('../img/map/icon_depth1_menu.png') no-repeat;
-    background-position-y: -36px;
+
+li.map_icon_food::before {
+	content: '';
+	display: block;
+	width: 36px;
+	height: 36px;
+	margin: auto;
+	background: url('../img/map/icon_depth1_menu.png') no-repeat;
+	background-position-y: -36px;
 }
-li.map_icon_cafe::before{
-    content: '';
-    display: block;
-    width: 36px;
-    height: 36px;
-    margin: auto;
-    background: url('../img/map/icon_depth1_menu.png') no-repeat;
-    background-position-y: -72px;
+
+li.map_icon_cafe::before {
+	content: '';
+	display: block;
+	width: 36px;
+	height: 36px;
+	margin: auto;
+	background: url('../img/map/icon_depth1_menu.png') no-repeat;
+	background-position-y: -72px;
 }
-li.map_icon_hotel::before{
-    content: '';
-    display: block;
-    width: 36px;
-    height: 36px;
-    margin: auto;
-    background: url('../img/map/icon_depth1_menu.png') no-repeat;
-    background-position-y: -108px;
+
+li.map_icon_hotel::before {
+	content: '';
+	display: block;
+	width: 36px;
+	height: 36px;
+	margin: auto;
+	background: url('../img/map/icon_depth1_menu.png') no-repeat;
+	background-position-y: -108px;
 }
-li.map_icon_park::before{
-    content: '';
-    display: block;
-    width: 36px;
-    height: 36px;
-    margin: auto;
-    background: url('../img/map/icon_depth1_menu.png') no-repeat;
-    background-position-y: -144px;
+
+li.map_icon_park::before {
+	content: '';
+	display: block;
+	width: 36px;
+	height: 36px;
+	margin: auto;
+	background: url('../img/map/icon_depth1_menu.png') no-repeat;
+	background-position-y: -144px;
 }
-li.map_icon_electric_charg::before{
-    content: '';
-    display: block;
-    width: 36px;
-    height: 36px;
-    margin: auto;
-    background: url('../img/map/icon_depth1_menu.png') no-repeat;
-    background-position-y: -180px;
+
+li.map_icon_electric_charg::before {
+	content: '';
+	display: block;
+	width: 36px;
+	height: 36px;
+	margin: auto;
+	background: url('../img/map/icon_depth1_menu.png') no-repeat;
+	background-position-y: -180px;
 }
-li.map_icon_recomand_thema::before{
-    content: '';
-    display: block;
-    width: 36px;
-    height: 36px;
-    margin: auto;
-    background: url('../img/map/icon_depth1_menu.png') no-repeat;
-    background-position-y: -216px;
+
+li.map_icon_recomand_thema::before {
+	content: '';
+	display: block;
+	width: 36px;
+	height: 36px;
+	margin: auto;
+	background: url('../img/map/icon_depth1_menu.png') no-repeat;
+	background-position-y: -216px;
 }
-li.map_icon_trip_course::before{
-    content: '';
-    display: block;
-    width: 36px;
-    height: 36px;
-    margin: auto;
-    background: url('../img/map/icon_depth1_menu.png') no-repeat;
-    background-position-y: -252px;
+
+li.map_icon_trip_course::before {
+	content: '';
+	display: block;
+	width: 36px;
+	height: 36px;
+	margin: auto;
+	background: url('../img/map/icon_depth1_menu.png') no-repeat;
+	background-position-y: -252px;
 }
-li.map_icon_myTrip::before{
-    content: '';
-    display: block;
-    width: 36px;
-    height: 36px;
-    margin: auto;
-    background: url('../img/map/icon_depth1_menu.png') no-repeat;
-    background-position-y: -288px;
+
+li.map_icon_myTrip::before {
+	content: '';
+	display: block;
+	width: 36px;
+	height: 36px;
+	margin: auto;
+	background: url('../img/map/icon_depth1_menu.png') no-repeat;
+	background-position-y: -288px;
 }
-li.map_icon_set::before{
-    content: '';
-    display: block;
-    width: 36px;
-    height: 36px;
-    margin: auto;
-    background: url('../img/map/icon_depth1_menu.png') no-repeat;
-    background-position-y: -324px;
+
+li.map_icon_set::before {
+	content: '';
+	display: block;
+	width: 36px;
+	height: 36px;
+	margin: auto;
+	background: url('../img/map/icon_depth1_menu.png') no-repeat;
+	background-position-y: -324px;
 }
 /* 카카오 맵 스타일 */
-div#map{
-    width: 100%;
-    height: 100vh;
+div#map {
+	width: 100%;
+	height: 100vh;
 }
 
 /* map_mapSection sytle */
-div.map_mapSection{
-    width: calc(100% - 350px);
+div.map_mapSection {
+	width: calc(100% - 350px);
 }
 
 /*Event_contentRow 데이터 불러온 내용 스타일*/
-.Event_contentRow .count{
+.Event_contentRow .count {
 	line-height: 80px;
 }
 
-.dayCircle{
-width: 60px;
-height: 60px;
-line-height: 60px;
-text-align: center;
+.dayCircle {
+	width: 60px;
+	height: 60px;
+	line-height: 60px;
+	text-align: center;
 }
-.map_curr_location_name1 span{
+
+.map_curr_location_name1 span {
 	color: white;
 }
-.map_curr_location_name1 div{
+
+.map_curr_location_name1 div {
 	color: white;
+}
+
+.dotOverlay {
+	position: relative;
+	top: -40px;
+}
+/* 로딩 화면 스타일 */
+.loading-screen {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(255, 255, 255, 0.9); /* 흰색 배경에 투명도 적용 */
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 9999; /* 다른 요소 위에 표시 */
+}
+
+.loading-message {
+	font-size: 24px;
+	font-weight: bold;
 }
